HBASE-13191 allow jenkins params to alter MAVEN_OPTS, and default to setting more permgen.